--- a/Release_Notes.html
+++ b/Release_Notes.html
@@ -45,15 +45,50 @@
 <section id="update-history" class="col-sm-12 col-lg-8">
 <h1>Update history</h1>
 <div class="collapse">
-<input type="checkbox" id="collapse-section6" checked aria-hidden="true"> <label for="collapse-section6" aria-hidden="true"><strong>V6.0.0 / 11-October-2021</strong></label>
+<input type="checkbox" id="collapse-section7" checked aria-hidden="true"> <label for="collapse-section7" aria-hidden="true"><strong>V6.0.1 / 26-January-2022</strong></label>
 <div>
 <h2 id="main-changes">Main changes</h2>
+<p>This is a patch release of Open Bootloader Middleware that fixes a regression in USB protocol introduced with the official release v6.0.0.</p>
+<p>Nothing new in this release, only fixes to USB regression were made:</p>
+<ul>
+<li>Fix compilation issue due to use of wrong include file</li>
+<li>Restore removed functions:
+<ul>
+<li>Jump function</li>
+<li>Write Unprotect function</li>
+<li>Write Protect function</li>
+<li>Read Protect function</li>
+<li>Read Unprotect function</li>
+</ul></li>
+</ul>
+<h2 id="known-limitations">Known limitations</h2>
+<ul>
+<li>List of missing commands on USB protocol:
+<ul>
+<li>Get command</li>
+<li>Mass erase</li>
+</ul></li>
+</ul>
+<h2 id="backward-compatibility">Backward compatibility</h2>
+<ul>
+<li>Compatible with previous release.</li>
+</ul>
+<h2 id="dependencies">Dependencies</h2>
+<ul>
+<li>None.</li>
+</ul>
+</div>
+</div>
+<div class="collapse">
+<input type="checkbox" id="collapse-section6" aria-hidden="true"> <label for="collapse-section6" aria-hidden="true"><strong>V6.0.0 / 11-October-2021</strong></label>
+<div>
+<h2 id="main-changes-1">Main changes</h2>
 <h3 id="sixth-release">Sixth release</h3>
 <p>This is the sixth official release of Open Bootloader Middleware that adds some improvements to the code and adds support for special commands and CAN interface.</p>
 <p>New in this release:</p>
 <ul>
 <li>Add support for Special Commands</li>
-<li>Add suuport for CAN interface</li>
+<li>Add support for CAN interface</li>
 </ul>
 <p><strong>There is a compatibility break with previous release due to the below changes:</strong></p>
 <ul>
@@ -66,52 +101,8 @@
 <li>The user can now redefine the list of supported commands by interface in application side</li>
 <li>Changed the I2C busy state management API by removing dependencies with FLASH interface</li>
 </ul>
-<h2 id="known-limitations">Known limitations</h2>
-<ul>
-<li>List of missing commands on USB protocol:
-<ul>
-<li>Get command</li>
-<li>Mass erase</li>
-</ul></li>
-</ul>
-<h2 id="backward-compatibility">Backward compatibility</h2>
-<ul>
-<li>Not Compatible with previous release.</li>
-</ul>
-<h2 id="dependencies">Dependencies</h2>
-<ul>
-<li>None.</li>
-</ul>
-</div>
-</div>
-<div class="collapse">
-<input type="checkbox" id="collapse-section5" aria-hidden="true"> <label for="collapse-section5" aria-hidden="true"><strong>V5.0.0 / 03-June-2021</strong></label>
-<div>
-<h2 id="main-changes-1">Main changes</h2>
-<h3 id="fifth-release">Fifth release</h3>
-<p>This is the fifth official release of Open Bootloader Middleware that adds support for USBX stack</p>
-<ul>
-<li>List of implemented commands on USB protocol:
-<ul>
-<li>Get version</li>
-<li>Get ID</li>
-<li>Read memory</li>
-<li>Write memory</li>
-<li>Go command</li>
-<li>Erase FLASH</li>
-<li>Read protect</li>
-<li>Read unprotect</li>
-<li>Write protect</li>
-<li>Write unprotect</li>
-</ul></li>
-</ul>
 <h2 id="known-limitations-1">Known limitations</h2>
 <ul>
-<li>List of missing commands on USART, FDCAN, I2C and SPI protocols:
-<ul>
-<li>Special read command</li>
-<li>Special write command</li>
-</ul></li>
 <li>List of missing commands on USB protocol:
 <ul>
 <li>Get command</li>
@@ -120,7 +111,7 @@
 </ul>
 <h2 id="backward-compatibility-1">Backward compatibility</h2>
 <ul>
-<li>Compatible with previous release.</li>
+<li>Not Compatible with previous release.</li>
 </ul>
 <h2 id="dependencies-1">Dependencies</h2>
 <ul>
@@ -129,16 +120,14 @@
 </div>
 </div>
 <div class="collapse">
-<input type="checkbox" id="collapse-section4" aria-hidden="true"> <label for="collapse-section4" aria-hidden="true"><strong>V4.0.0 / 20-April-2021</strong></label>
+<input type="checkbox" id="collapse-section5" aria-hidden="true"> <label for="collapse-section5" aria-hidden="true"><strong>V5.0.0 / 03-June-2021</strong></label>
 <div>
 <h2 id="main-changes-2">Main changes</h2>
-<h3 id="forth-release">Forth release</h3>
-<p>This is the forth official release of Open Bootloader Middleware that adds support for SPI protocol</p>
-<p>The Open Bootloader SPI commands are compatible with the Standard Bootloader SPI commands.</p>
+<h3 id="fifth-release">Fifth release</h3>
+<p>This is the fifth official release of Open Bootloader Middleware that adds support for USBX stack</p>
 <ul>
-<li>List of implemented commands on SPI protocol:
+<li>List of implemented commands on USB protocol:
 <ul>
-<li>Get commands</li>
 <li>Get version</li>
 <li>Get ID</li>
 <li>Read memory</li>
@@ -161,7 +150,6 @@
 <li>List of missing commands on USB protocol:
 <ul>
 <li>Get command</li>
-<li>Read unprotect</li>
 <li>Mass erase</li>
 </ul></li>
 </ul>
@@ -176,24 +164,31 @@
 </div>
 </div>
 <div class="collapse">
-<input type="checkbox" id="collapse-section3" aria-hidden="true"> <label for="collapse-section3" aria-hidden="true"><strong>V3.0.0 / 23-October-2020</strong></label>
+<input type="checkbox" id="collapse-section4" aria-hidden="true"> <label for="collapse-section4" aria-hidden="true"><strong>V4.0.0 / 20-April-2021</strong></label>
 <div>
 <h2 id="main-changes-3">Main changes</h2>
-<h3 id="third-release">Third release</h3>
-<p>This is the third official release of Open Bootloader Middleware that adds support for USB DFU protocol</p>
-<p>The Open Bootloader USB commands are compatible with the Standard Bootloader USB commands except get command, read unprotect, mass erase, go commands</p>
+<h3 id="forth-release">Forth release</h3>
+<p>This is the forth official release of Open Bootloader Middleware that adds support for SPI protocol</p>
+<p>The Open Bootloader SPI commands are compatible with the Standard Bootloader SPI commands.</p>
 <ul>
-<li>List of implemented commands on USB protocol:
+<li>List of implemented commands on SPI protocol:
 <ul>
+<li>Get commands</li>
+<li>Get version</li>
+<li>Get ID</li>
 <li>Read memory</li>
 <li>Write memory</li>
-<li>Set Address Pointer</li>
+<li>Go command</li>
 <li>Erase FLASH</li>
+<li>Read protect</li>
+<li>Read unprotect</li>
+<li>Write protect</li>
+<li>Write unprotect</li>
 </ul></li>
 </ul>
 <h2 id="known-limitations-3">Known limitations</h2>
 <ul>
-<li>List of missing commands on USART, FDCAN and I2C protocols:
+<li>List of missing commands on USART, FDCAN, I2C and SPI protocols:
 <ul>
 <li>Special read command</li>
 <li>Special write command</li>
@@ -216,9 +211,49 @@
 </div>
 </div>
 <div class="collapse">
+<input type="checkbox" id="collapse-section3" aria-hidden="true"> <label for="collapse-section3" aria-hidden="true"><strong>V3.0.0 / 23-October-2020</strong></label>
+<div>
+<h2 id="main-changes-4">Main changes</h2>
+<h3 id="third-release">Third release</h3>
+<p>This is the third official release of Open Bootloader Middleware that adds support for USB DFU protocol</p>
+<p>The Open Bootloader USB commands are compatible with the Standard Bootloader USB commands except get command, read unprotect, mass erase, go commands</p>
+<ul>
+<li>List of implemented commands on USB protocol:
+<ul>
+<li>Read memory</li>
+<li>Write memory</li>
+<li>Set Address Pointer</li>
+<li>Erase FLASH</li>
+</ul></li>
+</ul>
+<h2 id="known-limitations-4">Known limitations</h2>
+<ul>
+<li>List of missing commands on USART, FDCAN and I2C protocols:
+<ul>
+<li>Special read command</li>
+<li>Special write command</li>
+</ul></li>
+<li>List of missing commands on USB protocol:
+<ul>
+<li>Get command</li>
+<li>Read unprotect</li>
+<li>Mass erase</li>
+</ul></li>
+</ul>
+<h2 id="backward-compatibility-4">Backward compatibility</h2>
+<ul>
+<li>Compatible with previous release.</li>
+</ul>
+<h2 id="dependencies-4">Dependencies</h2>
+<ul>
+<li>None.</li>
+</ul>
+</div>
+</div>
+<div class="collapse">
 <input type="checkbox" id="collapse-section2" aria-hidden="true"> <label for="collapse-section2" aria-hidden="true"><strong>V2.0.0 / 12-May-2020</strong></label>
 <div>
-<h2 id="main-changes-4">Main Changes</h2>
+<h2 id="main-changes-5">Main Changes</h2>
 <h3 id="second-release">Second release</h3>
 <p>This is the second official release of Open Bootloader Middleware that adds support for I2C protocol.</p>
 <p>The Open Bootloader I2C commands are compatible with the Standard Bootloader I2C commands</p>
@@ -244,7 +279,7 @@
 <li>Non stretch write unprotect</li>
 </ul></li>
 </ul>
-<h2 id="known-limitations-4">Known Limitations</h2>
+<h2 id="known-limitations-5">Known Limitations</h2>
 <ul>
 <li>List of missing commands on USART, FDCAN and I2C protocols:
 <ul>
@@ -252,11 +287,11 @@
 <li>Special write command</li>
 </ul></li>
 </ul>
-<h2 id="backward-compatibility-4">Backward Compatibility</h2>
+<h2 id="backward-compatibility-5">Backward Compatibility</h2>
 <ul>
 <li>Compatible with previous release.</li>
 </ul>
-<h2 id="dependencies-4">Dependencies</h2>
+<h2 id="dependencies-5">Dependencies</h2>
 <ul>
 <li>None.</li>
 </ul>
@@ -265,7 +300,7 @@
 <div class="collapse">
 <input type="checkbox" id="collapse-section1" aria-hidden="true"> <label for="collapse-section1" aria-hidden="true"><strong>V1.0.0 / 01-August-2019</strong></label>
 <div>
-<h2 id="main-changes-5">Main Changes</h2>
+<h2 id="main-changes-6">Main Changes</h2>
 <h3 id="first-release">First release</h3>
 <p>This is the first official release of Open Bootloader Middleware that supports USART and FDCAN protocols.</p>
 <p>The Open Bootloader USART and FDCAN commands are compatible with the Standard Bootloader commands.</p>
@@ -285,7 +320,7 @@
 <li>Write unprotect</li>
 </ul></li>
 </ul>
-<h2 id="known-limitations-5">Known Limitations</h2>
+<h2 id="known-limitations-6">Known Limitations</h2>
 <ul>
 <li>List of missing commands on USART and FDCAN protocols:
 <ul>
@@ -293,11 +328,11 @@
 <li>Special write command</li>
 </ul></li>
 </ul>
-<h2 id="backward-compatibility-5">Backward Compatibility</h2>
+<h2 id="backward-compatibility-6">Backward Compatibility</h2>
 <ul>
 <li>None.</li>
 </ul>
-<h2 id="dependencies-5">Dependencies</h2>
+<h2 id="dependencies-6">Dependencies</h2>
 <ul>
 <li>None.</li>
 </ul>
