--- a/Release_Notes.html
+++ b/Release_Notes.html
@@ -45,7 +45,16 @@
 <div class="col-sm-12 col-lg-8">
 <h1 id="update-history">Update history</h1>
 <div class="collapse">
-<input type="checkbox" id="collapse-section3" checked aria-hidden="true"> <label for="collapse-section3" aria-hidden="true"><strong>V3.0.0 / 23-October-2020</strong></label>
+<input type="checkbox" id="collapse-section4" checked aria-hidden="true"> <label for="collapse-section4" aria-hidden="true"><strong>V3.0.1 / 27-October-2020</strong></label>
+<div>
+<h2 id="main-changes">Main changes</h2>
+<ul>
+<li>Add an empty line at the end of some *.c files to avoid compilation warnings with MDK-ARM.</li>
+</ul>
+</div>
+</div>
+<div class="collapse">
+<input type="checkbox" id="collapse-section3" aria-hidden="true"> <label for="collapse-section3" aria-hidden="true"><strong>V3.0.0 / 23-October-2020</strong></label>
 <div>
 <h2 id="main-changes">Main changes</h2>
 <h3 id="third-release">Third release</h3>
